--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ resolver = "2"
 
 [workspace.dependencies]
 gossip = { path = "crates/gossip" }
+
+tracing = "0.1.40"
+tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
