--- a/bins/gossip_app/Cargo.toml
+++ b/bins/gossip_app/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 gossip.workspace = true
+
+tracing.workspace = true
+tracing-subscriber.workspace = true
+
 clap = { version = "4.5.4", features = ["derive"] }
-tracing = "0.1.40"
-tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
 time = "0.3.36"
 
 [[bin]]
