--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,19 @@
 [workspace]
-members = ["bins/gossip-app", "crates/connection-manager", "crates/gossip"]
+members = ["bins/gossip-app", "crates/connection-manager", "crates/discovery", "crates/gossip", "crates/message", "crates/utils"]
 resolver = "2"
 # default-members =[]
 
 [workspace.dependencies]
-gossip = { path = "crates/gossip" }
 connection-manager = {path = "crates/connection-manager"}
+discovery = { path = "crates/discovery" }
+gossip = { path = "crates/gossip" }
+message = { path = "crates/message" }
+utils = { path = "crates/utils" }
 
 tracing = "0.1.40"
 tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7.11"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
+futures = "0.3.17"
