--- a/crates/message/Cargo.toml
+++ b/crates/message/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+utils.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tracing = "0.1.40"
