--- a/bins/gossip-app/Cargo.toml
+++ b/bins/gossip-app/Cargo.toml
@@ -10,8 +10,10 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 tokio.workspace = true
 
-clap = { version = "4.5.4", features = ["derive"] }
 time = "0.3.36"
+chrono = "0.4.38"
+clap = { version = "4.5.4", features = ["derive"] }
+
 
 [[bin]]
 name = "gossip_app"
